# migrate

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  build_wine.sh  migrate.py  migrate.spec  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-binary.yml
docker/: Dockerfile.centos
migrate/: __init__.py  main.py
migrate/common/: __init__.py  api.py  checks.py  environment.py  options.py  orgs.py  pulls.py  repos.py  types.py
migrate/handlers/: __init__.py  orgs.py  repos.py
migrate/handlers/check/: check.py
migrate/handlers/enterprise/: __init__.py  enterprise.py  org.py
migrate/handlers/org/: __init__.py  actions.py  ipallow.py  org.py  secrets.py  settings.py
migrate/handlers/pull/: __init__.py  pull.py
migrate/handlers/repo/: repo.py  secrets.py  settings.py  visibility.py
scripts/: README.md  build.py  build_windows.ps1  build_wine.sh
tests/: test_main.py
tests/common/: test_api.py  test_api_types.py  test_types.py
tests/fixtures/: org_settings_01.json  org_settings_01.yml  repo_settings_01.json  repo_settings_01.yml
tests/handlers/: test_orgs.py  test_repos.py
